# Math-CPP

./: .gitignore  CMakeLists.txt  DeterminantZero.cpp  DiscreteDistribution.cpp  DiscreteDistribution.h  Distribution.cpp  Matrix.cpp  Matrix.h  MatrixColumnMismatch.cpp  MatrixNotSquare.cpp  MatrixRowMismatch.cpp  README.md  TestMath.cpp  Vector.cpp  Vector.h  VectorSizeMismatch.cpp  conanfile.py
Test/: DiscreteDistributionTest.cpp  DistributionTest.cpp  MatrixTest.cpp  TensorTest.cpp  VectorTest.cpp
src/: CMakeLists.txt  DiscreteDistribution.cpp  DiscreteDistribution.h  Distribution.cpp  Eigenvector.cpp  Eigenvector.h  Matrix.cpp  Matrix.h  MatrixDimensionMismatch.cpp  MatrixNotPositiveDefinite.cpp  MatrixNotSymmetric.cpp  MatrixRowColumnMismatch.cpp  Tensor.cpp  Tensor.h  Vector.cpp  Vector.h
